--- a/trunk/css/common.css
+++ b/trunk/css/common.css
@@ -16,8 +16,200 @@
     float: right;
 }
 
-/* 版心 */
+/* 版型 */
 .container {
     width: 1200px;
     margin: 0 auto;
+}
+
+
+
+/*1.顶部*/
+.tophar{
+    height: 28px;
+    background-color: #101010;
+}
+.tophar .container{
+    height:28px;
+    background-color: #101010;
+}
+.tophar .container p{
+    height:28px;
+    line-height: 28px;
+    color: #f1f1f1;
+}
+.tophar .container p:first-child{
+    text-indent: 210px;
+}
+.tophar .container p:first-child a{
+    color:#fff;
+    text-decoration: none;
+}
+.tophar .container p:nth-child(2){
+    margin-right: 10PX;
+}
+.tophar .container p:nth-child(2) a:not(.login){
+    color: #ff6700;
+}
+.tophar .container p:nth-child(2) .login{
+    color: #fff;
+}
+/*2.导航*/
+.nav{
+    height: 80px;
+    background-color: #fff;
+}
+.nav .search-shopcart-order{
+    margin-top: 5px;
+    height: 35px;
+}
+.nav .search-shopcart-order .search-input{
+    width: 440px;
+    height: 35px;
+    background-color: #ff6700;
+    margin-right: 38px;
+    position: relative;
+}
+.nav .search-shopcart-order .search-input span{
+    display: inline-block;
+    width: 50px;
+    height: 35px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    background-image: url('../img/bgicon.png');
+}
+.nav .search-shopcart-order .search-input .search{
+    width: 390px;
+    height: 31px;
+    border: 2px solid #ff6700;
+    text-indent:10px;
+    color: #333;
+    outline: none;
+}
+.nav .search-shopcart-order .shopcar-order{
+    width:200px ;
+    height: 35px;
+    background-color: pink;
+    font-size: 0px;
+}
+.nav .search-shopcart-order .shopcar-order button{
+    width: 100px;
+    height: 35px;
+    background-color:#ebebeb;
+    border: 1px solid #ccc;
+    font-size: 12px;
+    color: #333;
+}
+.nav .search-shopcart-order .shopcar-order button:nth-child(1){
+    background-color:#ff6700 ;
+    color: #fff;
+    padding-left: 3px;
+}
+.nav .search-shopcart-order .shopcar-order button:nth-child(1) span:first-child{
+   background-image:url(../img/bgicon02.png);
+    background-repeat: no-repeat;
+    background-size: 20px 16px;
+    display: inline-block;
+    vertical-align: top;
+    width: 20px;
+    height: 16px;
+    margin-right: 3px;
+}
+.nav .search-shopcart-order .shopcar-order button:nth-child(1) span:nth-child(2){
+    vertical-align: top;
+    display: inline-block;
+}
+.nav .search-shopcart-order .shopcar-order button:nth-child(1) span:nth-child(3){
+    display: inline-block;
+    vertical-align: top;
+    width: 20px;
+    margin-left: 15px;
+}
+/*分类导航*/
+.nav .category-menu {
+    margin-top:15px;
+    height: 30px;
+}
+.nav .category-menu .left-logo {
+    width: 200px;
+    height: 30px;
+    position: relative;
+}
+.nav .category-menu .left-logo img{
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+}
+.nav .category-menu ul {
+    width: 1000px;
+    height: 30px;
+}
+.nav .category-menu ul li {
+    float: left;
+    height: 30px;
+    line-height: 30px;
+    width: 85px;
+    font-size: 14px;
+    font-weight: 700;
+    text-align: center;
+    color: #333;
+}
+
+/*11.尾部*/
+.footer{
+    height: 470px;
+
+}
+.footer .logo-list {
+    width:100%;
+    height:90px;
+    background-color: #f2f2f2;
+}
+.footer .logo-list .logo-wrap{
+    width:786px;
+    height:96px;
+    margin:0 auto;
+}
+.footer .logo-list .logo-wrap li{
+    width:132px;
+    height:50px;
+    float:left;
+    margin-top: 23px;
+}
+.footer .logo-list .logo-wrap li:not(:first-child){
+    margin-left: 86px;
+}
+.footer .footer-text {
+    height:374px;
+    position: relative;
+    padding-top:40px;
+    box-sizing: border-box;
+}
+.footer .footer-text img{
+   position: absolute;
+   right:98px;
+   top:62px;
+}
+.footer .footer-text ul{
+    width:695px;
+    height:132px;
+    margin:0 auto;
+}
+.footer .footer-text ul li{
+  float:left;
+  height:132px;
+  width:139px;
+  text-align: center;
+}
+.footer .footer-text ul li dl{
+    line-height:26px;
+}
+.footer .footer-text ul li dl dt{
+    font-weight:600;
+    font-size: 16px;
+}
+.footer .footer-text p{
+    text-align: center;
+    margin-top: 45px;
 }
